<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/play_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onClickPlaySoundButton"
        android:text="@string/play_sound_text"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/question_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_sound"
        app:layout_constraintBottom_toTopOf="@+id/notes"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/button_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_I_text" />

        <Button
            android:id="@+id/button_II"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_II_text"
            app:layout_constraintStart_toEndOf="@id/button_I" />

        <Button
            android:id="@+id/button_III"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_III_text"
            app:layout_constraintStart_toEndOf="@id/button_II" />

        <Button
            android:id="@+id/button_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_IV_text"
            app:layout_constraintStart_toEndOf="@id/button_III" />

        <Button
            android:id="@+id/button_V"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_V_text"
            app:layout_constraintStart_toEndOf="@id/button_IV" />

        <Button
            android:id="@+id/button_VI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_VI_text"
            app:layout_constraintStart_toEndOf="@id/button_V" />

        <Button
            android:id="@+id/button_VII"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/button_VII_text"
            app:layout_constraintStart_toEndOf="@id/button_VI" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>